--- a/style.css
+++ b/style.css
@@ -455,15 +455,13 @@ header .header-container div {
   border-top: 4px solid #d07f57;
   padding: 50px;
   /* margin-top: 100px; */
-  background-color: #040e28;
+  background-color: #fff;
 }
 
 .contact .footer-msg h1 {
-  color: #040e28;
+  color: #0e2440;
   font-size: 40px;
-  text-shadow: 2px 2px 0 #d07f57, 2px -2px 0 #d07f57, -2px 2px 0 #d07f57,
-    -2px -2px 0 #d07f57, 2px 0px 0 #d07f57, 0px 2px 0 #d07f57,
-    -2px 0px 0 #d07f57, 0px -2px 0 #d07f57;
+  letter-spacing: 1.5px;
 }
 
 .contact a {
@@ -476,6 +474,7 @@ header .header-container div {
   align-items: center;
   justify-content: center;
   width: 100%;
+  border-bottom: 2px solid #0e2440;
 }
 
 .container {
@@ -484,83 +483,54 @@ header .header-container div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-
   margin-left: auto;
   margin-right: auto;
 }
 
-.center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+.card {
+  width: 350px;
+  min-height: 250px;
+  padding: 30px;
+  margin: 0 auto;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
 }
 
-.card {
-  background-color: #0d2a59;
-  width: 350px;
-  min-height: 250px;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  padding: 30px;
-  margin: 0 auto;
-
-  box-shadow: -20px -20px 0px 0px #d07f57;
-  border-radius: 10px;
-
-  -webkit-animation-name: shadow-show;
-  /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 1.5s;
-  /* Safari 4.0 - 8.0 */
-  animation-name: shadow-show;
-  animation-duration: 1.5s;
-
-  -webkit-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
-  -o-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
-  transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+.card h1 {
   font-weight: bold;
-  /* custom */
+  color: #0e2440;
+  font-size: 30px;
 }
 
 .card a {
   color: #d07f57;
   font-weight: bold;
+  font-size: 18px;
 }
-
-footer .container hr {
-  display: block;
-  border: none;
-  height: 3px;
-  background-color: #d07f57;
-  margin: 10px 0;
-
-  -webkit-animation-name: line-show;
-  /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 0.3s;
-  /* Safari 4.0 - 8.0 */
-  animation-name: line-show;
-  animation-duration: 0.3s;
-  -webkit-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
-  -o-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
-  transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
-  /* custom */
+.card span {
+  font-weight: bold;
+  font-size: 18px;
 }
 
 footer img {
   width: 30%;
   color: #fff;
   padding: 10px;
-  -webkit-filter: invert(100%);
-  /* Safari/Chrome */
-  filter: invert(100%);
+}
+
+footer .copy {
+  margin-top: 20px;
+  color: #000;
+}
+
+footer .copy a {
+  color: #000;
+  font-weight: bold;
 }
 
 /* ABA SOBRE */
@@ -901,7 +871,6 @@ footer img {
   }
 
   .card {
-    background-color: #0d2a59;
     width: 350px;
     min-height: 250px;
     display: flex;
@@ -911,6 +880,15 @@ footer img {
     flex-direction: column;
     padding: 30px;
     margin: 0 auto;
+    border-bottom: 2px solid #0e2440;
+  }
+
+  .container-all {
+    border-bottom: none;
+  }
+
+  .contact .copy {
+    font-size: 12px;
   }
 }
 
@@ -1093,7 +1071,6 @@ footer img {
   }
 
   .card {
-    background-color: #0d2a59;
     width: 300px;
     min-height: 250px;
     padding: 20px;
@@ -1300,7 +1277,6 @@ footer img {
   }
 
   .card {
-    background-color: #0d2a59;
     width: 300px;
     min-height: 250px;
     padding: 20px;
